<resources>
    <string name="app_name">赛维洗衣官方</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="order">订单</string>
    <string name="no_order_prompt_part_one">赛维懒到家，洗衣全靠她！72小时送回，</string>
    <string name="no_order_prompt_part_two">全程即时跟踪！</string>
    <string name="price_list">价目表</string>
    <string name="do_order">一键下单</string>
    <string name="order_appointment">预约取件</string>
    <string name="addr">地址</string>
    <string name="fetch_time">上门时间</string>
    <string name="is_wash_shoes">是否洗鞋</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="order_appointment_prompt_default">订单未满10元收取8元取送费。\n普通洗涤72小时送回，
\n包含鞋类洗涤订单5-7天送回。</string>
    <string name="order_appointment_prompt">订单未满%1$s元收取%2$s元取送费。\n普通洗涤72小时送回，
\n包含鞋类洗涤订单5-7天送回。</string>
    <string name="order_fee_free">订单满%1$s元，免取送费</string>
    <string name="order_fee_pay">订单未满%1$s元，收取送费</string>
    <string name="commit_order">提交订单</string>
    <string name="loading">加载中...</string>
    <string name="hint_no_phonenum">请输入手机号码</string>
    <string name="illegal_phonenum">手机号输入错误</string>
    <string name="edit_username">请输入手机号</string>
    <string name="edit_code">请输入验证码</string>
    <string name="get_check_code">获取验证码中</string>
    <string name="wait_data">准备数据中，稍等片刻</string>
    <string name="operating">操作中</string>
    <string name="del_addr">删除地址</string>
    <string name="del">删除</string>
    <string name="del_addr_prompt">你确定删除当前地址吗？</string>
    <string name="del_succ">删除成功</string>
    <string name="setting_succ">设置成功</string>
    <string name="setting_fail">设置成功</string>
    <string name="select_addr">选择地址</string>
    <string name="get_code_succ_prompt">获取成功,即将收到验证码短信</string>
    <string name="no_order_prompt">您还没有保存过地址哦~</string>
    <string name="add_new_addr">添加新地址</string>
    <string name="add_fail_prompt">添加失败</string>
    <string name="add_succ_prompt">添加成功</string>
    <string name="edit_succ_prompt">修改成功</string>
    <string name="edit_fail_prompt">修改失败</string>
    <string name="add_addr_title">新增地址</string>
    <string name="edit_addr_title">修改地址</string>
    <string name="addr_user_prompt">请输入姓名</string>
    <string name="addr_sel_sex">请选择性别</string>
    <string name="addr_mobile_prompt">请输入手机号</string>
    <string name="addr_prefix_prompt">请在地图上选择一个地址</string>
    <string name="addr_endfix_prompt">请输入详细地址</string>
    <string name="name">姓名</string>
    <string name="woman">女士</string>
    <string name="man">先生</string>
    <string name="_woman">(女士)</string>
    <string name="_man">(先生)</string>
    <string name="your_contact">联系方式</string>
    <string name="addr_detail">详细地址</string>
    <string name="select_position_in_map">在地图上选择一个位置</string>
    <string name="fill_detail_addr">详细地址、具体门牌号</string>
    <string name="save_addr">提交</string>
    <string name="title_select_position">选择地理位置</string>
    <string name="title_edit_addr">修改地址</string>
    <string-array name="hoursnew">
        <item>09:00 ~ 10:00</item>
        <item>10:00 ~ 11:00</item>
        <item>11:00 ~ 12:00</item>
        <item>12:00 ~ 13:00</item>
        <item>13:00 ~ 14:00</item>
        <item>14:00 ~ 15:00</item>
        <item>15:00 ~ 16:00</item>
        <item>16:00 ~ 17:00</item>
        <item>17:00 ~ 18:00</item>
        <item>18:00 ~ 19:00</item>
        <item>19:00 ~ 20:00</item>
    </string-array>
    <string name="select_time_prompt">请选择上门时间</string>
    <string name="select_addr_prompt">请选择地址</string>
    <string name="service_permission">继续使用代表您已阅读并同意赛维集团相关\n《<u>服务协议条款</u>》</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="date">日</string>
    <string name="coupon_used">*这张优惠券已经使用*</string>
    <string name="coupon_expired">*这张优惠券已经过期*</string>
    <string name="valid_time">使用期限：</string>
    <string name="to">-</string>
    <string name="input_exchange_code">请输入兑换码</string>
    <string name="exchange_fail">网络异常，兑换失败</string>
    <string name="tips">提醒：</string>
    <string name="select_addr_tips">请选择您的地理位置</string>
    <string name="order_detail">订单详情</string>
    <string name="operation_order_cancel">取消订单</string>
    <string name="operation_order_pay">继续支付</string>
    <string name="operation_order_remark">打分评价</string>
    <string name="operation_order_share">分享有礼</string>
    <string name="operation_order_confirm">确认收衣</string>
    <string name="order_no">订单编号</string>
    <string name="appointment_time">预约时间</string>
    <string name="tips_appointment_time">预约时间：</string>
    <string name="user_name">用户姓名</string>
    <string name="phone">电话</string>
    <string name="order_addr">取送地址</string>
    <string name="order_status_booking">预约完成</string>
    <string name="order_status_reserved">待上门</string>
    <string name="order_status_pickup">上门中</string>
    <string name="order_status_wait_to_pay">待支付</string>
    <string name="order_status_paid">已支付</string>
    <string name="order_status_paid_exception">支付异常</string>
    <string name="order_status_washing">洗涤中</string>
    <string name="order_status_wash_finish">洗涤完成</string>
    <string name="order_status_sending_back">送返中</string>
    <string name="order_status_delivered">已送达</string>
    <string name="order_status_wash_again">返洗中</string>
    <string name="order_status_compeleted">订单完成</string>
    <string name="fee_detail">费用明细</string>
    <string name="sender_name_tips">取送员：</string>
    <string name="sender_mobile">电话  </string>
    <string name="subprice">小计</string>
    <string name="price">单价</string>
    <string name="transport_fee">取送费</string>
    <string name="to_be_priced">待计价</string>
    <string name="cancel_fail">取消失败</string>
    <string name="cancel_succ">取消成功</string>
    <string name="bind_fail">绑卡失败，请稍后再试！</string>
    <string name="bind_succ">绑卡成功！</string>
    <string name="bind_coupon">绑定阳光卡</string>
    <string name="cancel_order_reason1">无人响应</string>
    <string name="cancel_order_reason2">无人上门</string>
    <string name="cancel_order_reason4">重复下单</string>
    <string name="cancel_order_reason5">价格略贵</string>
    <string name="cancel_order_reason6">地址错误</string>
    <string name="cancel_order_reason7">另约时间</string>
    <string name="cancel_order_reason8">余额不足</string>
    <string name="cancel_order_reason9">其他原因</string>
    <string name="cancel_order_reason3">其他原因（请在下方输入）</string>
    <string name="select_reason">请选择或添加您取消订单的原因</string>
    <string name="order_total_price_tips">订单总价：</string>
    <string name="coupons_tips">优惠券：</string>
    <string name="balance_discount_tips">扣除余额：</string>
    <string name="final_pay_tips">还需支付：</string>
    <string name="pay_order">支付订单</string>
    <string name="pay_succ">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="we_key">abcdefghijklmnopqrstuvwxyz123456</string>
    <string name="no_available_coupons">暂无可用优惠券</string>
    <string name="balance_pay_tips">余额支付：</string>
    <string name="paying">支付中</string>
    <string name="refreshing">刷新中</string>
    <string name="no_avialable_coupons">暂无可用优惠券</string>
    <string name="title_banlance">当前账户余额</string>
    <string name="recharge_fail">充值失败</string>
    <string name="balance_detail">余额明细</string>
    <string name="version_update"><u>版本更新</u></string>
    <string name="balance_tips">余额：</string>
    <string name="no_banlance_detail">没有充值明细</string>
    <string name="no_marketing">暂时没有活动，敬请期待</string>
    <string name="get_marketing_fail">网络异常，获取活动失败</string>
    <string name="marketing_detail">活动详情</string>
    <string name="memo_tips">备注：</string>
    <string name="contact_kefu">联系客服</string>
    <string name="back_wash_time">返洗时间</string>
    <string name="title_addr_mgr">地址管理</string>
    <string name="balance_recharge"><u>充值活动协议</u></string>
    <string name="recharge_permission">充值协议</string>
    <string name="recharge">充值有礼</string>
    <string name="rec_text1">我已阅读并同意《充值返现活动协议》，知悉充值本金和返现金额均不可提现。\n\n尊敬的用户，为保障您的合法权益，请您在参加充值返现活动前认真阅读本协议。在您点击“充值”按钮后，我们默认您已经知悉如下活动条款。\n\n<b>1.活动内容</b>\n凡在活动期间，在赛维洗衣会员账户上充值即可享受返现福利。\n\n<b>2.活动参与方式</b>\n个人用户可通过赛维洗衣官网手机客户端及官方微信公众号参与充值活动。\n\n<b>3.账户余额构成</b>\n您实际支付的充值本金加上赛维洗衣的返现金额会构成您的账户余额（人民币）。\n\n<b>4.账户余额使用规则</b>\n账户余额可用于赛维洗衣洗衣服务，充值后，账户余额均不支持提现、转赠。\n\n<b>5.发票金额</b>\n按实际收取的金额开具发票，赠送金额不能开具发票。\n\n<b>6.特别声明</b>\n充值返现活动仅提供给正当、合法使用赛维洗衣服务的用户。活动中，一旦发现作弊行为(包括且不限于利用集团账户套利、配合干洗门店刷单、在第三方平台销售我司产品)，赛维洗衣有权取消相关账户活动返现金额、追回作弊所得、回收账号使用权，并扣除百分之20的账户余额作为惩罚金；最终可退款金额=（用户充值金额-消费金额）×（1-被扣的百分之20）。赛维洗衣保留取消作弊人后续参与赛维洗衣任何活动的权利，必要时会追究其法律责任。\n\n7.本次充值返现活动的最终解释权归上海懒到佳信息技术有限公司所有。</string>
    <string name="user_text1">\n1.赛维洗衣平台根据本服务条款及对该条款的修改向您提供服务，本服务条款具有合同法上的法律效力。\n2.如果您对协议的任何条款表示异议，您可以选择不注册，一旦您点选“注册”并通过注册程序，即表示您自愿接受本协议之所有条款，并已成为赛维洗衣平台的注册会员。您在使用赛维洗衣平台的同时，同意接受赛维洗衣平台会员服务提供的各类服务。\n</string>
    <string name="user_text2">\n1.您注册会员成功后，赛维洗衣平台将给予您一个帐号及相应的密码，该帐号和密码由您负责保管；您应当对您帐号进行的所有活动和事件负法律责任。\n2.因您保管疏忽或黑客行为致使帐号、密码被他人非法使用的，本公司不承担任何责任。如您发现任何非法使用会员帐号或安全漏洞的情况，请立即与本公司联系。\n3.赛维洗衣平台为了更好的为您服务，需要您提供联系方式、地址等信息，赛维洗衣对您的上述信息保密，未征得您明确同意和法律明确规定外，赛维洗衣不会向任何第三方提供您的上述信息。\n</string>
    <string name="user_text3">\n赛维洗衣是为用户提供洗衣服务的在线平台，现有微信、APP服务端，提供线上下单、预约取送、洗涤等服务。您可以在赛维洗衣帐户中查询到您的订单记录，包括您的取衣日期、取衣地址、洗衣费等记录。\n</string>
    <string name="user_text4">\n1.您注册成功后即可使用赛维洗衣平台提供的各项服务。\n2、您在使用赛维洗衣平台提供的服务时，必须遵守国家规定的相关法律法规。\n</string>
</resources>