<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/white_shape"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">
        <TextView

            android:text="@string/order_no"
            android:textSize="15dp"
            android:textColor="@color/text_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />


        <TextView
            android:id="@+id/text_order_detail_no"
            android:text=""
            android:textSize="15dp"
            android:layout_marginLeft="28dp"
            android:textColor="@color/text_dark_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/appointment_time"
            android:textSize="15dp"
            android:textColor="@color/text_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/text_order_detail_appoint_time"
            android:text=""
            android:textSize="15dp"
            android:layout_marginLeft="28dp"
            android:textColor="@color/text_dark_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/user_name"
            android:textSize="15dp"
            android:textColor="@color/text_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/text_order_detail_username"
            android:text=""
            android:textSize="15dp"
            android:layout_marginLeft="28dp"
            android:textColor="@color/text_dark_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/user_name"
                android:textSize="15dp"
                android:visibility="invisible"
                android:textColor="@color/text_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/phone"
                android:textSize="15dp"
                android:textColor="@color/text_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>



        <TextView
            android:id="@+id/text_order_detail_user_phone"
            android:text=""
            android:textSize="15dp"
            android:layout_marginLeft="28dp"
            android:textColor="@color/text_dark_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/order_addr"
            android:textSize="15dp"
            android:textColor="@color/text_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/text_order_detail_user_addr"
            android:text=""
            android:maxLines="2"
            android:textSize="15dp"
            android:lineSpacingExtra="6dp"
            android:layout_marginLeft="28dp"
            android:textColor="@color/text_dark_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/gray_divider"/>

    </LinearLayout>

</LinearLayout>