<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_add_address">
    <LinearLayout

        android:background="@color/common_bg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/back_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="28dp"
                android:paddingLeft="28dp"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/name"
                        android:textSize="15dp"
                        android:textColor="@color/text_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:visibility="invisible"
                        android:text="@string/fetch_time"
                        android:textSize="15dp"
                        android:textColor="@color/text_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_marginLeft="23dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_width="0dp">
                    <LinearLayout


                        android:layout_width="match_parent"
                        android:paddingBottom="20dp"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <EditText
                            android:textCursorDrawable="@null"
                            android:id="@+id/edit_add_addr_name"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:background="@android:color/transparent"
                            android:text=""
                            android:textColor="@color/text_dark_black"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />


                        <LinearLayout
                            android:id="@+id/gender_woman_parent"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/text_gender_woman"
                                android:textSize="14dp"
                                android:textColor="@color/sex_text_color"
                                android:layout_width="wrap_content"
                                android:text="@string/woman"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:visibility="visible"
                                android:id="@+id/image_gender_woman"
                                android:layout_marginLeft="3dp"
                                android:src="@mipmap/icon_box_selected"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginRight="20dp"
                            android:id="@+id/gender_man_parent"
                            android:layout_marginLeft="22dp"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:enabled="false"
                                android:textSize="14dp"
                                android:textColor="@color/sex_text_color"
                                android:layout_width="wrap_content"
                                android:text="@string/man"
                                android:id="@+id/text_gender_man"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:id="@+id/image_gender_man"
                                android:visibility="invisible"
                                android:layout_marginLeft="3dp"
                                android:src="@mipmap/icon_box_selected"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>
                    <include layout="@layout/gray_divider"/>
                </LinearLayout>





            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="28dp"
                android:paddingLeft="23dp"
                android:layout_height="wrap_content">


                <TextView
                    android:text="@string/your_contact"
                    android:textSize="15dp"
                    android:textColor="@color/text_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginLeft="23dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <EditText
                        android:textCursorDrawable="@null"
                        android:id="@+id/edit_add_addr_mobile"
                        android:background="@android:color/transparent"
                        android:textSize="15dp"
                        android:textColor="@color/text_dark_black"
                        android:layout_width="match_parent"
                        android:paddingBottom="20dp"
                        android:text=""
                        android:inputType="number"
                        android:layout_height="wrap_content" />

                    <include layout="@layout/gray_divider"/>
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="28dp"
                android:paddingLeft="23dp"
                android:layout_height="wrap_content">


                <TextView
                    android:text="@string/addr_detail"
                    android:textSize="15dp"
                    android:textColor="@color/text_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginLeft="23dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/edit_add_addr_prefix"
                                android:background="@android:color/transparent"
                                android:textSize="15dp"
                                android:textColorHint="@color/text_gray"
                                android:layout_width="match_parent"
                                android:hint="@string/select_position_in_map"
                                android:cursorVisible="false"
                                android:editable="false"
                                android:textColor="@color/text_dark_black"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/text_add_addr_prefix"
                                android:background="@android:color/transparent"
                                android:textSize="15dp"
                                android:layout_width="match_parent"


                                android:textColor="@color/text_dark_black"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>


                        <ImageView
                            android:layout_marginRight="16dp"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/icon_arrow_right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <include layout="@layout/gray_divider"/>

                </LinearLayout>





            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="28dp"
                android:paddingLeft="23dp"
                android:layout_height="wrap_content">


                <TextView
                    android:visibility="invisible"
                    android:text="@string/addr_detail"
                    android:textSize="15dp"
                    android:textColor="@color/text_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginLeft="23dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:textCursorDrawable="@null"
                            android:id="@+id/edit_add_addr_endfix"
                            android:background="@android:color/transparent"
                            android:textSize="15dp"
                            android:textColorHint="@color/text_gray"
                            android:hint="@string/fill_detail_addr"
                            android:textColor="@color/text_dark_black"
                            android:layout_width="wrap_content"
                            android:paddingBottom="20dp"

                            android:layout_height="wrap_content" />
                    </LinearLayout>



                    <include layout="@layout/gray_divider"/>

                </LinearLayout>





            </LinearLayout>


        </LinearLayout>




    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="20dp"
        android:id="@+id/save_addr_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/text_black"
            android:layout_centerInParent="true"
            android:text="@string/save_addr"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </RelativeLayout>

</RelativeLayout>